--- a/spider/Makefile
+++ b/spider/Makefile
@@ -4,20 +4,23 @@
 UNAME := $(shell uname)
 ifeq ($(UNAME),SCO_SV)
 	CC:=CC
-	CFLAGS=$(DEBUG) $(INCLUDES) $(LIBS)
 	LIBS=-lhydra -lz -lm -ldl -lpthread -lsocket -Bstatic -lssl -lcrypto -Bdynamic
+	CFLAGS=$(DEBUG) $(INCLUDES)
+	LDFLAGS=$(DEBUG) -L$(LIBPATH)
 endif
 
 ifeq ($(UNAME),Linux)
 	CC:=g++
-	CFLAGS=-Wall $(DEBUG) $(INCLUDES) $(LIBS)
 	LIBS=/usr/local/lib/libssl.a /usr/local/lib/libcrypto.a -lhydra -lz -lm -ldl -lpthread
+	CFLAGS=-Wall $(DEBUG) $(INCLUDES)
+	LDFLAGS=$(DEBUG) -L$(LIBPATH)
 endif
 
 ifeq ($(UNAME),Darwin)
 	CC:=g++
-	CFLAGS=-Wall $(DEBUG) $(INCLUDES) $(LIBS)
 	LIBS=-B,static -lssl -lcrypto -B,dynamic -lhydra -lz -lm -ldl -lpthread
+	CFLAGS=-Wall $(DEBUG) $(INCLUDES)
+	LDFLAGS=$(DEBUG) -L$(LIBPATH)
 endif
 
 ID=spider
@@ -32,8 +35,6 @@ BIN=$(BINPATH)/$(ID)
 
 INCLUDES=-I. -I$(INCPATH) -I$(SQLITE3)
 DEPENDS=$(LIBPATH)/libhydra.a $(SQLITE3)/sqlite3.o
-
-LDFLAGS=$(DEBUG) -L$(LIBPATH)
 
 OBJ= $(ID).o
 
